<resources>
    <string name="app_name">AlertApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_keysearch">AIzaSyAGeCU2PHRGZBV_SPN3bp7tbjYI2zXwXBo</string>
    <string name="api_key">AIzaSyC9NuN_f-wESHh3kihTvpbvdrmKlTQurxw</string>
    <string name="mapapi_key">AIzaSyCjVUypDYIrx1DDEC8pDj1GQ9AISFmKyF8</string>
    <string name="welcome_to">Welcome \nTo</string>
    <string name="your_password_has_been_changed_successfully">Your password has been changed\n successfully.</string>
    <string name="enter_the_verification_code_sent_to_your_registered_email_phone">Enter the verification code sent to\n your registered email/phone.</string>
    <string name="onboardingDescription1">From childhood to senior years, Alerts for\n Life grows with you, providing peace of\n mind and security.</string>
    <string name="onboardingDescription2">Stay in touch with nearby neighbors and\n loved ones for proactive safety checks and\n peace of mind.</string>
    <string name="onboardingDescription3">Help is always a tap away. Whether it\'s a safety check or an emergency, we\'ve got you covered.</string>
    <string name="stay_connected_stay_protected">Stay Connected,\n Stay\n Protected</string>
    <string name="help_at_your_fingertips">Help at\n Your\n Fingertips</string>
    <string name="welcome_to_your_safety_companion">Welcome to Your Safety\n Companion</string>
    <string name="your_account_has_been_created_successfully">Your account has been created \n successfully.</string>
    <string name="password_changed">Password Changed!</string>
    <string name="ok">Ok</string>
    <string name="allow_maps_to_access_your_location_while_you_use_the_app">Allow maps to access your\n location while you use the app?</string>
    <string name="skip">Skip</string>
    <string name="country">Country</string>
    <string name="please_select_your_country">Please Select Your Country</string>
    <string name="select_country">Select Country</string>
    <string name="please_select_your_language">Please Select Your Language</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="next">Next</string>
    <string name="email_phone">Email/Phone</string>
    <string name="password">Password</string>
    <string name="my_profile">My Profile</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="todo">TODO</string>
    <string name="privacy_policy"><u>&amp;</u> Privacy &amp; Policy</string>
    <string name="terms_conditions"><![CDATA[terms & conditions]]></string>
    <string name="terms_conditions1"><u>terms &amp; conditions</u></string>
    <string name="agree_to_the">Agree to the</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="you_have_been_invited_from_danny_to_be_his_neighbor_on_alerts_for_life_app_please_accept">You have been invited from Danny to be his \nneighbor on Alerts for Life app. \nPlease accept.</string>
    <string name="alerts_for_life_app_invitee">Alerts For Life \nApp Invitee</string>
    <string name="if_you_want_to_start_fresh_create_a_new_account">If you want to start fresh, Create a new \naccount.</string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="invitation_accept_successfully">Invitation Accept Successfully</string>
    <string name="know_about_your_alerts_for_life_app">Know about your \nAlerts For Life App</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_vel_mauris_sed_sapien_bibendum_rutrum_vitae_non_augue_nullam_interdum_sem_ut_tincidunt_pharetra_quisque_sit_amet_elit_turpis_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_vel_mauris_sed_sapien_bibendum_rutrum_vitae_non_augue_nullam_interdum_sem_ut_tincidunt_pharetra_quisque_sit_amet_elit_turpis_lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mauris sed sapien bibendum rutrum vitae non augue. Nullam interdum sem ut tincidunt pharetra. Quisque \nsit amet elit turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mauris sed sapien bibendum rutrum vitae non augue. Nullam interdum sem ut tincidunt pharetra. Quisque sit amet elit turpis. Lorem ipsum dolor sit \namet.</string>
    <string name="click_to_see_tutorial_video">Click to see tutorial video</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="set_alerts">Set Alerts</string>
    <string name="currently_no_contact_is_added_click_below_to_add_friends_and_family">Currently no contact is added. \nClick below to add friends and family.</string>
    <string name="add_friends_amp_family"><![CDATA[+  Add Friends & Family]]></string>
    <string name="invite"><u>Invite</u>  </string>
    <string name="other_to_get_alerts"> other to get Alerts!</string>
    <string name="or">or</string>
    <string name="you_can_copy_this_link_and_share_to_your_loved_ones_to_get_the_recent_alerts">You can copy this link and share to your loved ones to get the recent alerts.</string>
    <string name="http_loremipsome_fghiuteris">http://LoremIpsome/fghiuteris</string>
    <string name="how_do_you_wish_to_add_the_contact">How Do You Wish To Add \nThe Contact</string>
    <string name="manually">Manually</string>
    <string name="from_contacts">From Contacts</string>
    <string name="from_map">From Map</string>
    <string name="add_contact">Add Contact</string>
    <string name="select_relation"><b>Select Relation</b></string>
    <string name="select_alert"><b>Select Alert</b></string>
    <string name="add">+ Add</string>
    <string name="added_contacts">Added Contacts</string>
    <string name="proceed">Proceed</string>
    <string name="search">Search</string>
    <string name="dad">Dad</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="danny">Danny</string>
    <string name="relation">Relation :  </string>
    <string name="view_alerts">View Alerts</string>
    <string name="are_you_sure_you_want_to_delete_your_contact">Are you sure you want to delete \nyour contact?</string>
    <string name="no">No</string>
    <string name="add_a_contact">Add a Contact</string>
    <string name="you_can_add_a_contact_here">You can add a contact here:</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="self_alerts">Self Alerts</string>
    <string name="location_sharing">Location Sharing</string>
    <string name="check_in_history">Check-In History</string>
    <string name="helping_neighbors">Helping Neighbors</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="emergency_text">Emergency Text</string>
    <string name="health_alert">Health Alert</string>
    <string name="watch_over_me">Watch Over me</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="know_more">Know More</string>
    <string name="tutorial_video">Tutorial Video</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="edit">Edit</string>
    <string name="enter_address">Enter Address</string>
    <string name="setting">Settings</string>
    <string name="support">Support</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="sign_out">Sign Out</string>
    <string name="nearby_people">Nearby People</string>
    <string name="see_all_nearby_people">See All Nearby People</string>
    <string name="notifications">Notifications</string>
    <string name="check_history">Check-In History</string>
    <string name="check_ins">Check Ins</string>
    <string name="responds">Responds</string>
    <string name="respond">Respond</string>
    <string name="cancel">Cancel</string>
    <string name="responded">Responded</string>
    <string name="responded_date_amp_time_08_31_2024_09_20"><![CDATA[Responded Date &Time - 08/31/2024 09:20]]></string>
    <string name="alerts">Alerts</string>
    <string name="messages">Messages</string>
    <string name="set_self_alerts">Set Self Alerts</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_vel_mauris_sed_sapien_bibendum_rutrum_vitae_non_augue_nullam_interdum_sem_ut_tincidunt_pharetra_quisque_sit_amet_elit_turpis">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mauris sed sapien bibendum rutrum vitae non augue. Nullam interdum sem ut tincidunt pharetra. Quisque sit amet elit turpis.</string>
    <string name="set_alerts_now">Set Alerts Now</string>
    <string name="contact_list">Contact List</string>
    <string name="select_time">Select Time</string>
    <string name="choose_for_how_long_you_want_to_share_your_location">Choose for how long you want \nto share your Location.</string>
    <string name="share">Share</string>
    <string name="you_have_shared_your_location_successfully">You have shared your Location \nsuccessfully.</string>
    <string name="add_now">+ Add Now</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to \nlogout?</string>
    <string name="emergency_message">Emergency Message</string>
    <string name="are_you_okay">Are You Okay?</string>
    <string name="meanwhile_you_can_use_our_ai_chatbot_n_for_your_help">Meanwhile, you can use our AI ChatBot\n for your help.</string>
    <string name="kudooos_you_are_on_right_path_go_on_with_same_path">Kudooos!!!</string>
    <string name="you_have_been_deviated_from_actual_path_since_the_given_time_please_calibrate_now">You have been deviated from \nactual path since the given time. \nPlease calibrate now!</string>
    <string name="add_more">Add More</string>
    <string name="select_time_duration">Select Time Duration</string>
    <string name="alerts_for_life_helping_neighbors">Alerts For Life \nHelping Neighbors</string>
    <string name="kingston_new_york"><u>Kingston, New York  </u></string>
    <string name="health_alerts">Health Alerts</string>
    <string name="other_alerts">Other Alerts</string>
    <string name="set_health_alert_for">Set Health Alert For</string>
    <string name="select_alert_duration">Select Alert Duration</string>
    <string name="save_alert">Save Alert</string>
    <string name="no_contact_found">No Contact Found</string>
    <string name="about_us">About Us</string>
    <string name="faq_s">FAQ’s</string>
    <string name="search_for_area">Search for area</string>
    <string name="alerted_your_emergency_contact">We have Alerted your Emergency Contact.\n" "They will contact you soon.</string>
    <string name="sos">SOS!</string>
    <string name="we_are_here_for_you">We are here for you.</string>
    <string name="brb">BRB!</string>
    <string name="_10_miles_away"><u>10 Miles Away</u></string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_nelit">Lorem ipsum dolor sit amet, consectetur adipiscing \nelit.</string>
    <string name="choose_starting_point">Choose starting point</string>
    <string name="choose_end_point">Choose destination point</string>
    <string name="peace_of_mind_everyday">Peace of mind everyday</string>
    <string name="help_needed"><b>Help Needed</b></string>
    <string name="add_alert_now">Add Alert Now</string>
    <string name="select_date">Select Date</string>
    <string name="alert_title">Alert Title</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="set">Set</string>
</resources>