<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.main.SettingFragment">

    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/three_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/three_line"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#22172A"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/urbanist_medium"
            android:text="@string/setting"/>


        <LinearLayout
            android:id="@+id/lay_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_alignParentEnd="true">
            <ImageView
                android:id="@+id/lay_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/trailing_icon"/>

            <ImageView
                android:id="@+id/img_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/trailing_icon_notification"/>

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/appbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_my_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/urbanist_medium"
                android:gravity="center_vertical"
                android:text="@string/my_profile"
                android:textColor="#0F0F0F"
                android:textSize="@dimen/_15sdp"
                app:drawableStartCompat="@drawable/search_btn" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="#777777"/>

            <TextView
                android:id="@+id/tv_support"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/urbanist_medium"
                android:gravity="center_vertical"
                android:text="@string/about_us"
                android:textColor="#0F0F0F"
                android:textSize="@dimen/_15sdp"
                app:drawableStartCompat="@drawable/support_icon" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:visibility="gone"
                android:background="#777777"/>

            <TextView
                android:id="@+id/tv_Help"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/urbanist_medium"
                android:gravity="center_vertical"
                android:text="@string/help"
                android:visibility="gone"
                android:textColor="#0F0F0F"
                android:textSize="@dimen/_15sdp"
                app:drawableStartCompat="@drawable/help_btn_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="#777777"/>

            <TextView
                android:id="@+id/tv_faq"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/urbanist_medium"
                android:gravity="center_vertical"
                android:text="@string/faq_s"
                android:textColor="#0F0F0F"
                android:textSize="@dimen/_15sdp"
                app:drawableStartCompat="@drawable/help_btn_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="#777777"/>

            <TextView
                android:id="@+id/tv_Privacy_Policy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/urbanist_medium"
                android:gravity="center_vertical"
                android:text="@string/privacy_policy_text"
                android:textColor="#0F0F0F"
                android:textSize="@dimen/_15sdp"
                app:drawableStartCompat="@drawable/privacy_policy_icon" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="#777777"/>

            <TextView
                android:id="@+id/tv_terms_amp_conditions"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/urbanist_medium"
                android:gravity="center_vertical"
                android:text="@string/terms_amp_conditions"
                android:textColor="#0F0F0F"
                android:textSize="@dimen/_15sdp"
                app:drawableStartCompat="@drawable/termsandcondition_icon" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="#777777"/>

            <TextView
                android:id="@+id/delete_my_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/urbanist_medium"
                android:gravity="center_vertical"
                android:text="@string/delete_my_account"
                android:textColor="#0F0F0F"
                android:textSize="@dimen/_15sdp"
                app:drawableStartCompat="@drawable/delete_icon" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="#777777"/>

            <TextView
                android:id="@+id/tv_sign_out"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/urbanist_medium"
                android:gravity="center_vertical"
                android:text="@string/sign_out"
                android:textColor="#0F0F0F"
                android:textSize="@dimen/_15sdp"
                app:drawableStartCompat="@drawable/sign_out_icon" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="#777777"/>

        </LinearLayout>
    </ScrollView>


    <include
        layout="@layout/sadow_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>